fix login box running offscreen, and fix some silly whitespace

--- a/less/components/navbar.less
+++ b/less/components/navbar.less
@@ -142,6 +142,10 @@
                 margin-left: auto;
             }
         }
+        .dropdown-menu {
+            left: auto;
+            right: 0;
+        }
     }
 
     @media (max-width:800px) {
